# shard-den

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build_rs_cov.profraw  netlify.toml  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/designs/flows/json-extractor/: flow.md  state.md
docs/designs/json-extractor/flows/: flow.md  sequence.mmd
docs/designs/json-extractor/ui/: interactions.md  prototype.md
docs/designs/ui/json-extractor/: prototype.md
docs/designs/uml-styler/flows/: flow.md  sequence.mmd
docs/designs/uml-styler/ui/: prototype.md
docs/plans/: 2026-02-15-json-extractor-implementation.md  2026-02-15-shard-den-architecture-design.md  2026-02-28-uml-styler-implementation.md  desktop-delta-updates.md  wasm-modular-loading.md
docs/plans/iterations/: 2026-03-01-security-fixes-design.md
docs/plans/tasks/: security-fixes-progress.md  uml-styler-progress.md
docs/summary/: bundle-size-optimization.md  github-actions-build-speedup.md  github-actions.md  tree-shaking-report.md  version-management.md
scripts/: build-all.sh  compress-with-upx.sh  generate-icons.mjs
