[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/wasm",
    "packages/tools/json-extractor",
    "packages/tools/json-extractor/cli",
    "packages/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/shard-den"

[workspace.dependencies]
# Internal crates
shard-den-core = { path = "packages/core" }
shard-den-json = { path = "packages/tools/json-extractor" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async/Error handling
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
mockall = "0.12"
insta = { version = "1.34", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
