[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/wasm",
    "packages/cli",
    "packages/tools/json-extractor",
    "packages/tools/uml-styler",
    "packages/tools/uml-styler/cli",
    "packages/desktop",
]

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["oGsLP <1145234011@qq.com>"]
license = "MIT"
repository = "https://github.com/oGsLP/shard-den"

[workspace.dependencies]
# Internal crates
shard-den-core = { path = "packages/core" }
shard-den-json-extractor = { path = "packages/tools/json-extractor" }
shard-den-uml-styler = { path = "packages/tools/uml-styler" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async/Error handling
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Encoding
base64 = "0.22"

# Testing
mockall = "0.12"
insta = { version = "1.34", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
